# atak

./: .gitignore  .gitmodules  README.md
app/: build.gradle  gradle.properties
app/src/main/cpp/qtoken-cpp/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  defaults.cfg
app/src/main/cpp/qtoken-cpp/.gitlab/ci/: README.md  analysis.gitlab-ci.yml  build.gitlab-ci.yml  docker.gitlab-ci.yml  global.gitlab-ci.yml  package.gitlab-ci.yml  test.gitlab-ci.yml
app/src/main/cpp/qtoken-cpp/apps/: CMakeLists.txt  main.cpp
app/src/main/cpp/qtoken-cpp/cmake/: AddCPPCheck.cmake  AddClangFormat.cmake  DownloadGBench.cmake  DownloadGTest.cmake  FindGBench.cmake  FindGTest.cmake  SourcesandHeaders.cmake
app/src/main/cpp/qtoken-cpp/docker/: Dockerfile.build_arm64  Dockerfile.build_libs_arm64  Dockerfile.build_libs_x86  Dockerfile.build_x86_64  Dockerfile.test
app/src/main/cpp/qtoken-cpp/docs/: android-api.md  raspi.md  setup.md
app/src/main/cpp/qtoken-cpp/include/coders/: concurrent_decoder.hpp  concurrent_encoder.hpp  decoder.hpp  encoder.hpp  entanglement_decoder.hpp  entanglement_encoder.hpp  pipeline.hpp  polar_decoder.hpp  polar_encoder.hpp
app/src/main/cpp/qtoken-cpp/include/crypto/: bio.hpp  ec.hpp  exception.hpp  random.hpp  rsakey.hpp  x509.hpp
app/src/main/cpp/qtoken-cpp/include/crypto/EVP/: cipher.hpp  digest.hpp  pkey.hpp
app/src/main/cpp/qtoken-cpp/include/globals/: logger.hpp
app/src/main/cpp/qtoken-cpp/include/nodes/: bootstrap.hpp  host.hpp  node.hpp
app/src/main/cpp/qtoken-cpp/include/receipt/: crypto_receipt.hpp  receipt_service.hpp  receipt_session.hpp  share_connection_handler.hpp
app/src/main/cpp/qtoken-cpp/include/server/: http_form_server.hpp  http_server_thread.hpp
app/src/main/cpp/qtoken-cpp/include/server/handlers/: form_request_handler_factory.hpp  request_handlers.hpp  share_part_handler.hpp  spread_part_handler.hpp  stream_part_handler.hpp
app/src/main/cpp/qtoken-cpp/include/tools/: byte_vector.hpp  chunker.hpp  types.hpp  utils.hpp  uuid.hpp
app/src/main/cpp/qtoken-cpp/scripts/: build_libs.sh  cmake_get_sources_and_headers.sh  control  gen_deploy.sh  kademlia_test_script.sh  network_test.sh  package.sh  postinst  preinst  raspi-install.sh  ubuntu-install.sh
app/src/main/cpp/qtoken-cpp/scripts/aff3ct_patches/: MIPP_backtrace_patch.patch  aff3ct_backtrace_patch.patch
app/src/main/cpp/qtoken-cpp/src/: CMakeLists.txt
app/src/main/cpp/qtoken-cpp/src/coders/: concurrent_decoder.cpp  concurrent_encoder.cpp  entanglement_decoder.cpp  entanglement_encoder.cpp  pipeline.cpp  polar_decoder.cpp  polar_encoder.cpp  polar_fbg.cpp
app/src/main/cpp/qtoken-cpp/src/crypto/: bio.cpp  cms.cpp  cms.hpp  ec.cpp  exception.cpp  random.cpp  rsakey.cpp  x509.cpp
app/src/main/cpp/qtoken-cpp/src/crypto/EVP/: cipher.cpp  digest.cpp  pkey.cpp
app/src/main/cpp/qtoken-cpp/src/globals/: config.cpp  globals.cpp
app/src/main/cpp/qtoken-cpp/src/nodes/: bootstrap.cpp  host.cpp  node.cpp
app/src/main/cpp/qtoken-cpp/src/receipt/: crypto_receipt.cpp  receipt_service.cpp  receipt_session.cpp  share_connection_handler.cpp
app/src/main/cpp/qtoken-cpp/src/server/: http_form_server.cpp  http_server_thread.cpp
app/src/main/cpp/qtoken-cpp/src/server/handlers/: form_request_handler_factory.cpp  request_handlers.cpp  share_part_handler.cpp  spread_part_handler.cpp  stream_part_handler.cpp
app/src/main/cpp/qtoken-cpp/src/tools/: byte_vector.cpp  chunker.cpp  lfsr.cpp  uuid.cpp
app/src/main/cpp/qtoken-cpp/test/: CMakeLists.txt
app/src/main/cpp/qtoken-cpp/test/adversarial_tests/: CMakeLists.txt  adv_main.cpp  adv_utils.hpp  bsc.cpp  bsc.hpp  channel.hpp  jammer.cpp  jammer.hpp
app/src/main/cpp/qtoken-cpp/test/benchmark_tests/: CMakeLists.txt  bench_utils.hpp  bit_encoding_test.cpp  empty_pipeline_test.cpp  pipeline_encoding_test.cpp
app/src/main/cpp/qtoken-cpp/test/robot/resources/: keywords.robot  terraform_mesh.py  vars.robot
app/src/main/cpp/qtoken-cpp/test/robot/testsuites/: ips_test.robot  smoke-test.robot
app/src/main/cpp/qtoken-cpp/test/terraform/: backend.tf  data_sources.tf  install-vin.sh  main.tf  policy.tf  vars.tf
app/src/main/cpp/qtoken-cpp/test/unit_tests/: CMakeLists.txt  chunker_test.cpp  concurrent_coder_test.cpp  crypto_receipt_test.cpp  entanglement_test.cpp  lfsr_test.cpp  pipeline_test.cpp  polar_coder_test.cpp  polar_fbg_test.cpp  test_utils.hpp  types_test.cpp  utils_test.cpp
assimp/: .gitignore
atak/: local.properties
atak/ATAK/app/: build.gradle
atak/ATAK/app/src/main/cpp/: CMakeLists.txt  vin-bridge.cpp
atak/ATAK/app/src/main/cpp/include/aff3ct-2.3.5/MIPP/: mipp.h
atak/ATAK/app/src/main/cpp/include/aff3ct-2.3.5/aff3ct/Module/: Task.hpp
atak/ATAK/app/src/main/cpp/include/aff3ct-2.3.5/aff3ct/Module/Interleaver/: Interleaver.hxx
atak/ATAK/app/src/main/cpp/include/kademlia/: endpoint.hpp  session.hpp  session_base.hpp
atak/ATAK/app/src/main/cpp/include/openssl/: cms.h  comp.h  conf.h  crypto.h  ct.h  dsa.h  engine.h  ocsp.h  pem.h  pkcs7.h  rsa.h  store.h  ts.h  ui.h  x509.h  x509v3.h
atak/ATAK/app/src/main/cpp/include/qtoken/: main.cpp
atak/ATAK/app/src/main/cpp/include/qtoken/coders/: concurrent_decoder.cpp  concurrent_encoder.cpp  concurrent_encoder.hpp  decoder.hpp  entanglement_decoder.cpp  entanglement_decoder.hpp  entanglement_encoder.cpp  polar_encoder.cpp  polar_encoder.hpp  polar_fbg.cpp
atak/ATAK/app/src/main/cpp/include/qtoken/globals/: globals.hpp  logger.hpp  strings.hpp
atak/ATAK/app/src/main/cpp/include/qtoken/nodes/: bootstrap.cpp  bootstrap.hpp  host.cpp  host.hpp
atak/ATAK/app/src/main/cpp/include/qtoken/receipt/: connection_handler.cpp  connection_handler.hpp  crypto_receipt.cpp  crypto_receipt.hpp  receipt_session.cpp  receipt_session.hpp
atak/ATAK/app/src/main/cpp/include/qtoken/tools/: chunker.cpp  types.hpp  utils.hpp
atak/ATAKMapEngine/lib/: build.gradle
gdal/: configure  ltmain.sh  makefile.vc  nmake.opt
gdal/frmts/mrsid/: nmake.opt
gdal/gcore/: gdal.h  gdal_proxy.h  gdalproxydataset.cpp  overview.cpp
gdal/port/: cpl_error.h
takthirdparty/: Makefile
(+208 files in other folders)
